# pharaoh-contracts

./: .env.example  README.md  foundry.toml  hardhat.config.ts  package-lock.json  package.json  pyproject.toml  verification.json  verify_pool_custom.sh
contracts/: AccessHub.sol  ContractDeployer.sol  Gauge.sol  Minter.sol  Pair.sol  Pharaoh.sol  VoteModule.sol  Voter.sol
contracts/CL/core/: DustSwapper.sol  RamsesV3Factory.sol
contracts/CL/gauge/: FeeCollector.sol  GaugeV3.sol  RewardValidator.sol
contracts/CL/gauge/interfaces/: IFeeCollector.sol  IRewardValidator.sol
contracts/CL/periphery/: NonfungiblePositionManager.sol  NonfungibleTokenPositionDescriptor.sol  RamsesV3PositionManager.sol
contracts/helpers/: ActingNotifier.sol  AutomatedFeeNotifier.sol
contracts/interfaces/: IAccessHub.sol  IMinter.sol  IP33.sol  IVoteModule.sol  IXPhar.sol
contracts/libraries/: AccessHubStorage.sol  VoterGovernanceActions.sol  VoterRewardClaimers.sol
contracts/mev/: MevModule.sol
contracts/migration/: PharaohMigrator.sol  VeClaim.sol
contracts/treasury/: RamsesTreasuryHelper.sol
contracts/xPhar/: P33.sol  XPhar.sol
scripts/: help.txt
test/: InitHash.t.sol  TestAntiJit.t.sol  TestERC20.sol  TestEpoch0.t.sol
utils/: configs.ts  constants.ts  deployment.ts  helpers.ts  testDeployment.ts
