[project]
name = "v3-dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hyperliquid-python-sdk",
    "python-dotenv>=1.1.0",
    "web3>=7.12.0",
]

[tool.uv.sources]
hyperliquid-python-sdk = { git = "https://github.com/hyperliquid-dex/hyperliquid-python-sdk.git" }
